<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="module_android_demo.example.com.demo_printer.fragment.PrinterBarcodeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv2D"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:scaleType="center" />

        <EditText
            android:id="@+id/editPrintBarcodeData"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:gravity="top|left"

            android:hint="barcode data"
            android:padding="5dp"
            android:scrollbarStyle="outsideOverlay"
            android:scrollbars="vertical"
            android:singleLine="false" />

        <TextView
            android:id="@+id/tvMsg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#339933" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printBarcodeType" />

            <Spinner
                android:id="@+id/spBarcodeType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/arrayBarcodeType" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printBarcodeHeight" />

            <EditText
                android:id="@+id/etHeight"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:inputType="number" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="(1-255)" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printBarcodeWidth" />

            <Spinner
                android:id="@+id/spBarcodeWidth"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/BarcodeWidth" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvMsg2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#339933" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/printBarcodeChar" />

            <Spinner
                android:id="@+id/spBarcodePosition"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/spBarcodePosition" />
        </LinearLayout>

        <Button
            android:id="@+id/btnPrintBarcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Print" />
    </LinearLayout>

</FrameLayout>
