<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="module_android_demo.example.com.demo_printer.fragment.PrinterMainFragment">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1"

            android:gravity="center|top"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="2"

                android:gravity="top|left"
                android:padding="5dp"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                android:singleLine="false"
                android:text="@string/PrintContent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_weight="1">

                <ScrollView
                    android:id="@+id/scrollMSG1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_msg"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"

                        />
                </ScrollView>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/cbContinuous"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="Continuous" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dip"
                android:text=" "
                android:visibility="gone" />


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="s"
                android:visibility="gone" />


        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="fill_parent"
            android:layout_height="50dip"

            android:gravity="center">

            <Button
                android:id="@+id/btn_print"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/Print" />

            <Button
                android:id="@+id/btn_clear"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/clear" />
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
